--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ main project
 	
 	<p style="color:white; font-size:30px;">- 4 YEAR ANIVERSITY!</p>
 	
-	<p style="color:white; font-size:30px;"> - new firing range updates </p>
+	<p style="color:white; font-size:30px;"> - New Firing Range Updates </p>
 	
 	<p style="color:white;"></p>
 	<br></br>
@@ -156,7 +156,7 @@ main project
 <div class="information" style="background-color:#212121; border: 5px solid grey; height : 400px; margin-top:2%;">
   <div class="column" style="border: 2px solid grey; text-align:center;">
     <h2>Help</h2>
-    <p style="color:white;">NAVIGATE THROUGH THE WEBSITE TO FIND USEFUL INFORMATION ABOUT APEX LEGENDS. IN THIS WEBSITE YOU CAN INFOMRATION ABOUT; WEAPONS, SKINS FOR CHARACTERS, WEAPONS, AND CHARM, AND ALL THE DIFFERENT TYPES OF MAPS!!!!</p>
+    <p style="color:white;">NAVIGATE THROUGH THE WEBSITE TO FIND USEFUL INFORMATION ABOUT APEX LEGENDS. IN THIS WEBSITE YOU CAN FIND INFOMRATION ABOUT: WEAPONS, SKINS FOR CHARACTERS, WEAPONS, AND CHARM, AND ALL THE DIFFERENT TYPES OF MAPS!!!!</p>
   </div>
   <div class="column" style="border: 2px solid grey; text-align:center;">
     <h2>About Us</h2>
@@ -174,7 +174,7 @@ main project
   
   <div class="column" style="border: 2px solid grey; text-align: center;">
     <h2>Services</h2>
-    <p style="color:white;">for more additional information about the game click the link below:</p>
+    <p style="color:white;">For more additional information about the game click the link below:</p>
 	<a href="https://www.ea.com/able/resources/apex-legends" style="text-decoration: none; color: #333; background-color: turquoise; padding: 10px 20px; border-radius: 5px; display:block;">Accessibility Resources Apex Legends</a>
 	<br>
 	<br>
@@ -185,7 +185,7 @@ main project
   </div>
   <div class="column" style="border: 2px solid grey; text-align:center;">
     <h2>Address</h2>
-    <p style="color:white;"> Lethbridge college </p>
+    <p style="color:white;"> Lethbridge College </p>
 	<p style="color:white;">3000 College Dr S, Lethbridge, AB T1K 1L6</p>
   </div>
 </div>
